--- a/nav.css
+++ b/nav.css
@@ -1,3 +1,21 @@
+/*
+    font-family: 'Bree Serif', serif;
+
+    font-family: 'Comfortaa', cursive;
+
+    font-family: 'Dosis', sans-serif;
+
+    font-family: 'Inter', sans-serif;
+
+    font-family: 'Montserrat', sans-serif;
+
+    font-family: 'Montserrat Alternates', sans-serif;
+
+    font-family: 'Nerko One', cursive;
+
+    font-family: 'Sono', sans-serif;
+
+*/
 /* ***********************************General Styles ********************************************/
 
 a {
@@ -82,12 +100,11 @@ a {
   }
   
   .navbar-brand {
-    font-family: myFirstFont;
-    font-weight: 500;
+        font-weight: 500;
     /* font-size: 0.5rem; */
-    font-family: "Roboto";
+    /* font-family: "Roboto"; */
     font-weight: 500;
-    font-size: 3.5rem;
+    font-size: 3.5 rem;
   }
   .nav-item /* for each navbar item */ {
     font-size: 1.1rem;
