--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ height: 74px;
 }
 
 .navbar-brand {
-font-family: "elinga", "myFirstFont", "Roboto";
+    font-family: 'Dosis', sans-serif;
 font-weight: 500;
 /* font-size: 0.5rem; */
 font-size: 56px;
